--- a/css/style.css
+++ b/css/style.css
@@ -79,16 +79,11 @@ hr.style-two {
     padding-left: 20px;
     padding-right: 20px;
 
+    transition: all .3s linear;
 }
 
 .project-button:hover{
     background-color: #1eb871;
     color: rgba(0, 0, 0, 0.5);
-    border: 3px solid;
-    border-color: #1eb871;
-    border-radius: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
 }
+
