--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
     background-color: #262827;
     color: white;
     font-family: "Open Sans", sans-serif;
+    padding-top: 60px;
 }
 
 
@@ -18,6 +19,7 @@ body{
 /* change the link color */
 .navbar-custom .navbar-nav .nav-link {
     color: white;
+    font-size: 130%;
 }
 
 /* change the color of hovered links */
@@ -25,11 +27,24 @@ body{
     color: #1eb871;
 }
 
-.bg-img{
-    background-image: url("../img/keyboard-g2b6b6f66d_1920.jpg");
-
-    padding-bottom: 500px;
+.thumbnail {
+	background: url("../img/keyboard-g2b6b6f66d_1920.jpg") center center no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	position: relative;
+	height: auto;
+	overflow: hidden;
 }
+
+.thumbnail .overlay {
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    padding: 80px;
+}
+
 
 .main{
     color: #1eb871;
